# eins

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  algorithm.md  benchmarking.ipynb  examples.ipynb  examples.md  examples.py  index.html  mkdocs.yml  network.ipynb  parsing.md  perf.ipynb  pyproject.toml
.github/workflows/: main.yml
development_docs/: README.md  ordering.md
docs/: Makefile  api.md  cookbook.md  in-depth.md  index.md  tutorial.md
docs/api/eins/: README.md  combination.md  common_types.md  concrete.md  constraint.md  einsop.md  elementwise.md  parsing.md  reduction.md  symbolic.md  utils.md
docs/javascripts/: katex.js
docs/source/: conf.py  index.rst
docs/source/apidocs/: index.rst
docs/source/apidocs/eins/: eins.__about__.md  eins.combination.md  eins.common_types.md  eins.concrete.md  eins.constraint.md  eins.einsop.md  eins.elementwise.md  eins.md  eins.parsing.md  eins.reduction.md  eins.symbolic.md  eins.utils.md
docs/src/: eins.md
docs/src/eins/: combination.md  common_types.md  concrete.md  constraint.md  einsop.md  elementwise.md  parsing.md  reduction.md  symbolic.md  utils.md
docs/stylesheets/: extra.css
examples/: README.md  multi_head_attention.py  vit.py  vit_encoder.py
in-depth/: index.html
search/: search_index.json
src/array_api_compat/: LICENSE
src/eins/: __about__.py  __init__.py  combination.py  common_types.py  concrete.py  constraint.py  eager_eins.py  einsop.py  elementwise.py  namespaces.py  parsing.py  program.py  reduction.py  strategy.py  symbolic.py  transformation.py  utils.py
stylesheets/: extra.css
stylesheets/readme/: index.html
tests/: test_basic.py  test_commutes.py  test_parsing.py  utils.py
tutorial/: index.html
