[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eins"
dynamic = ["version"]
description = "One tensor operation is all you need"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  'artificial intelligence',
  'deep learning',
  'einops',
  'machine learning',
  'neural networks',
  'scientific computing',
  'tensor manipulation',
  'array manipulation',
]
authors = [
  { name = "Nicholas Miklaucic", email = "nicholas.miklaucic@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["array-api-compat", "pyparsing"]

[project.urls]
Documentation = "https://github.com/nicholas-miklaucic/eins#readme"
Issues = "https://github.com/nicholas-miklaucic/eins/issues"
Source = "https://github.com/nicholas-miklaucic/eins"

[tool.hatch.version]
path = "src/eins/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "numpy",
  "jax",
  "jaxlib",
  "torch",
  "flax",
  "jaxtyping",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/eins tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py38"]
line-length = 100
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # 2 is not a magic number, this is ridiculous
  "PLR2004",
  # Jaxtyping uses annotations ruff doesn't understand
  "F722",
  # named lambdas are fine
  "E731",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]
fix = true

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.isort]
known-first-party = ["eins"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["eins", "tests"]
branch = true
parallel = true
omit = ["src/eins/__about__.py"]

[tool.coverage.paths]
eins = ["src/eins", "*/eins/src/eins"]
tests = ["tests", "*/eins/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
